fix(yaml): correct path
Signed-off-by: Andrew Hill <andrew@textile.io>

--- a/action.yaml
+++ b/action.yaml
@@ -27,7 +27,7 @@ runs:
       shell: bash
     - name: Run audit
       id: run-audit
-      run: python src/github-reporting-tool.py
+      run: python github-reporting-tool.py
       shell: bash
 
 # for publishing purposes
