--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,7 +16,9 @@ jobs:
         with:
           org: ecohack
           token: ${{secrets.GITHUB_TOKEN}} # default token in GitHub Workflow
+      - run: echo "${{ steps.audit.outputs.org }}"
       - run: echo "${{ steps.audit.outputs.repos }}"
       - run: echo "${{ steps.audit.outputs.teams }}"
       - run: echo "${{ steps.audit.outputs.members }}"
       - run: echo "${{ steps.audit.outputs.rights }}"
+      - run: echo "${{ steps.audit.outputs.errors }}"
