--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,7 +33,12 @@ jobs:
           write-mode: overwrite
           contents: |
             {
-              "org": "${{ steps.audit.outputs.org }}"
+              "org": "${{ steps.audit.outputs.org }}",
+              "repos": ${{ steps.audit.outputs.repos }},
+              "teams": ${{ steps.audit.outputs.teams }},
+              "members": ${{ steps.audit.outputs.members }},
+              "rights": ${{ steps.audit.outputs.rights }},
+              "errors": "${{ steps.audit.outputs.errors }}",
             }
             
       - name: Commit & Push
