--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,7 +38,7 @@ jobs:
               "teams": ${{ steps.audit.outputs.teams }},
               "members": ${{ steps.audit.outputs.members }},
               "rights": ${{ steps.audit.outputs.rights }},
-              "errors": "${{ steps.audit.outputs.errors }}",
+              "errors": ${{ steps.audit.outputs.errors }},
             }
             
       - name: Commit & Push
