--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: ./
         # pass user input as arguments
         with:
-          path: .audit/output.json
+          path: ./.audit/output.json
           org: actions
           token: ${{secrets.GITHUB_TOKEN}} # default token in GitHub Workflow
       - run: echo "${{ steps.audit.outputs.org }}"
@@ -34,11 +34,3 @@ jobs:
           branch: main
           force: true
           message: 'Overwritten by Github Actions - ${date}'
-      - name: push
-        uses: github-actions-x/commit@v2.9
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          push-branch: 'master'
-          commit-message: 'Overwritten by Github Actions - ${date}'
-          force-add: 'true'
-          files: .audit/output.json
