fix(outputs): try diff org
Signed-off-by: Andrew Hill <andrew@textile.io>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Run Action
+      - name: Run audit
         id: audit
         # we can give directory path that contains action.yaml or repo address in username/repository_name format
         # in our case it would be nashmaniac/create-issue-action
