--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: ./
         # pass user input as arguments
         with:
-          path: ./audit/output.json
+          name: audit.json
           org: actions
           token: ${{secrets.GITHUB_TOKEN}} # default token in GitHub Workflow
       - run: echo "${{ steps.audit.outputs.org }}"
