--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: ./
         # pass user input as arguments
         with:
-          name: audit.json
+          path: audit.json
           org: actions
           token: ${{secrets.GITHUB_TOKEN}} 
       - run: echo "${{ steps.audit.outputs.org }}"
