fix(outputs): try diff org
Signed-off-by: Andrew Hill <andrew@textile.io>

--- a/action.yaml
+++ b/action.yaml
@@ -53,6 +53,11 @@ runs:
       run: python github-reporting-tool.py
       shell: bash
 
+    - name: Commit log
+      run: |
+        git config --local user.name  ${{ github.actor }}
+        git add ${{ inputs.path }}
+
 # for publishing purposes
 branding: #generates a logo for our action
   icon: lock #icon of the image
