fix(outputs): try diff org
Signed-off-by: Andrew Hill <andrew@textile.io>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,7 @@ jobs:
         uses: ./
         # pass user input as arguments
         with:
-          path: audit.json
+          path: .audit/audit.json
           org: actions
           token: ${{secrets.GITHUB_TOKEN}} 
       - run: echo "${{ steps.audit.outputs.org }}"
