fix(outputs): try diff org
Signed-off-by: Andrew Hill <andrew@textile.io>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,3 +32,7 @@ jobs:
           branch: main
           force: true
           message: 'Overwritten by Github Actions - ${date}'
+
+      - name: git
+        run: |
+          git diff HEAD~1
