fix(outputs): try diff org
Signed-off-by: Andrew Hill <andrew@textile.io>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,6 +33,6 @@ jobs:
           force: true
           message: 'Overwritten by Github Actions - ${date}'
 
-      - name: git
+      - name: Git diff
         run: |
           git diff HEAD~1
